--- a/react-app/src/styles/components/tag.scss
+++ b/react-app/src/styles/components/tag.scss
@@ -5,10 +5,14 @@
     text-align: center;
     font-weight: 500;
     margin: 20px 10px 0 0;
-    padding: 4px 10px;
+    padding: 4px 0;
     border-radius: 10px;
 
     @media screen and (max-width: 768px) {
         font-size: 10px;
     }
+}
+
+.tag-title {
+    padding: 4px 20px;
 }
