--- a/react-app/src/styles/components/banner.scss
+++ b/react-app/src/styles/components/banner.scss
@@ -15,6 +15,10 @@
         z-index: 1;
         width: 100%;
         height: 100%;
+
+        @media screen and (max-width:768px) {
+            border-radius: 10px;
+        }
     }
 
     h1 {
@@ -41,5 +45,9 @@
         height: 100%;
         border-radius: 25px;
         object-fit: cover;
+
+        @media screen and (max-width:768px) {
+            border-radius: 10px;
+        }
     }
 }
